[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-accelerated-dynamic-graphs"
version = "0.1.0"
description = "Machine Learning Accelerated Dynamic Graphs"
readme = "README.md"
requires-python = "==3.13.*"
license = {text = "MIT"}
authors = [
    {name = "Shashwat Kumar", email = "kumarshashwat1028@gmail.com"}
]
dependencies = [
    "numpy==2.3.3",
    "pandas==2.3.3",
    "networkx==3.5",
    "matplotlib==3.10.6",
    "black==25.9.0",
    "flake8==7.3.0",
    "pre-commit==4.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ml-accelerated-dynamic-graphs"
Documentation = "https://ml-accelerated-dynamic-graphs.readthedocs.io"
Repository = "https://github.com/yourusername/ml-accelerated-dynamic-graphs.git"
Issues = "https://github.com/yourusername/ml-accelerated-dynamic-graphs/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dsp*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | .tox
  | .venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
    ".mypy_cache",
    ".pytest_cache",
    ".tox",
]
